--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,30 +2,5 @@
 # Custom styles for Tailwind CSS site
 ---
 
-/* Custom fonts are now handled by Tailwind config in head.html */
-
-/* Custom styles can be added here if needed */
-.prose {
-  color: inherit;
-}
-
-.prose h1, .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
-  color: inherit;
-}
-
-.prose a {
-  color: rgb(59 130 246); /* text-blue-600 */
-  text-decoration: none;
-}
-
-.prose a:hover {
-  color: rgb(29 78 216); /* text-blue-700 */
-}
-
-.dark .prose a {
-  color: rgb(96 165 250); /* dark:text-blue-400 */
-}
-
-.dark .prose a:hover {
-  color: rgb(147 197 253); /* dark:text-blue-300 */
-}
+/* All prose styles are now handled in head.html */
+/* Add any additional custom styles here if needed */
