--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,9 +36,18 @@
     .prose h1 { font-size: 2.25rem; }
     .prose h2 { font-size: 1.875rem; }
     .prose h3 { font-size: 1.5rem; }
-    .prose h4 { font-size: 1.25rem; }
-    .prose h5 { font-size: 1.125rem; }
-    .prose h6 { font-size: 1rem; }
+    .prose h4 { 
+      font-size: 1.375rem; 
+      font-weight: 700;
+      color: rgb(31 41 55);
+      margin-top: 2.5rem;
+    }
+    .prose h5 { font-size: 1.25rem; }
+    .prose h6 { font-size: 1.125rem; }
+    
+    .dark .prose h4 {
+      color: rgb(243 244 246);
+    }
     
     .prose p {
       margin-top: 1.25rem;
@@ -71,8 +80,40 @@
       padding-left: 1.625rem;
     }
     
+    .prose ul {
+      list-style-type: disc;
+    }
+    
+    .prose ol {
+      list-style-type: decimal;
+    }
+    
+    .prose ul ul {
+      list-style-type: circle;
+    }
+    
+    .prose ul ul ul {
+      list-style-type: square;
+    }
+    
     .prose li {
       margin: 0.5rem 0;
+      line-height: 1.6;
+      display: list-item;
+    }
+    
+    .prose ul ul, .prose ol ol, .prose ul ol, .prose ol ul {
+      margin: 0.5rem 0;
+    }
+    
+    .prose li > ul, .prose li > ol {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+    
+    .prose strong {
+      font-weight: 600;
+      color: inherit;
     }
     
     .prose blockquote {
