--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,11 @@
       }
     }
   </script>
+  
+  <!-- Syntax highlighting with highlight.js -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-light.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
   <style>
     /* Enhanced markdown prose styles */
     .prose {
