--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,9 +26,9 @@ layout: default
       <div class="space-y-3">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {%- for post in posts limit: page.blog_posts_limit -%}
-        <div class="flex items-center justify-between p-4 bg-gray-50 rounded-lg hover:bg-gray-100 transition-colors">
-          <a href="{{ post.url | relative_url }}" class="text-blue-600 hover:text-blue-700 font-medium no-underline">{{ post.title | escape }}</a>
-          <span class="text-sm text-gray-500">{{ post.date | date: date_format }}</span>
+        <div class="flex items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:shadow-md hover:bg-gray-50 transition-all duration-200">
+          <a href="{{ post.url | relative_url }}" class="text-blue-600 hover:text-blue-700 font-medium no-underline text-lg">{{ post.title | escape }}</a>
+          <span class="text-sm text-gray-500 font-medium whitespace-nowrap ml-4">{{ post.date | date: date_format }}</span>
         </div>
         {%- endfor -%}
       </div>
@@ -62,9 +62,9 @@ layout: default
           <h3 class="text-xl font-medium text-gray-900 dark:text-white mb-4">{{category[0]}}</h3>
           <div class="space-y-2">
             {% for post in sorted_posts %}
-            <div class="flex items-center justify-between p-3 bg-gray-50 dark:bg-gray-900 rounded hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
-              <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 font-medium no-underline">{{ post.title }}</a>
-              <span class="text-sm text-gray-500 dark:text-gray-400">{{ post.date | date: date_format }}</span>
+            <div class="flex items-center justify-between p-3 bg-white border border-gray-200 rounded-lg shadow-sm hover:shadow-md hover:bg-gray-50 transition-all duration-200">
+              <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="text-blue-600 hover:text-blue-700 font-medium no-underline">{{ post.title }}</a>
+              <span class="text-sm text-gray-500 font-medium whitespace-nowrap ml-3">{{ post.date | date: date_format }}</span>
             </div>
             {% endfor %}
           </div>
